# ESGRiskComplianceAuditor

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml  keepalive.yml
docs/: MODEL_CARD.md
scripts/: ingest_regulatory_docs.py
src/esg_auditor/: __init__.py  app.py  config.py
src/esg_auditor/agents/: __init__.py  analyst_agent.py  client_agent.py  graph.py  prompts.py
src/esg_auditor/core/: __init__.py  circuit_breaker.py  contracts.py  exceptions.py  schemas.py  state.py
src/esg_auditor/eval/: __init__.py  finbert_eval.py  latency_benchmark.py  ragas_eval.py
src/esg_auditor/eval/datasets/: esg_qa.json  metrics_baseline.json
src/esg_auditor/rag/: __init__.py  chunker.py  embedder.py  ingest.py
src/esg_auditor/tools/: __init__.py  finbert.py  finnhub_tools.py  marketaux.py  qdrant_search.py  sec_edgar.py  yfinance_tools.py
src/esg_auditor/ui/: __init__.py  chat.py  components.py  dashboard.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_graph_e2e.py  test_rag_pipeline.py
tests/unit/: __init__.py  test_agents.py  test_chunker.py  test_circuit_breaker.py  test_contracts.py  test_finbert_eval.py  test_graph_skeleton.py  test_latency_benchmark.py  test_ragas_eval.py  test_schemas.py  test_tools.py
