[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esg-auditor"
version = "0.1.0"
description = "Multi-agent ESG portfolio auditor — SR 11-7 compliant"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.3.24",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langchain-core>=1.0.5",
    "langchain-anthropic>=1.0.0",
    "qdrant-client[fastembed]>=1.13.3",
    "fastembed>=0.5.1",
    "transformers>=4.48.0",
    "torch>=2.5.1",
    "finnhub-python>=2.4.20",
    "yfinance>=0.2.51",
    "sec-edgar-api>=1.1.0",
    "requests>=2.32.3",
    "streamlit>=1.42.0",
    "plotly>=6.0.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "ragas>=0.4.3",
    "tenacity>=9.0.0",
    "ratelimit>=2.2.1",
    "python-dotenv>=1.0.1",
    "langsmith>=0.3.12",
]

[project.optional-dependencies]
dev = [
    "ruff==0.9.10",
    "mypy==1.14.1",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.3",
    "pre-commit==4.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
